--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Vite will automatically handle this entry point during build -->
-    <script type="module" src="/index.tsx"></script>
+    <!-- Removed leading slash from src to support GitHub Pages subfolder pathing -->
+    <script type="module" src="index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
